unpv13e
Fedora

Not everything seems to be working. SCTP for one but some other code also throws error about data types.

good source
https://github.com/ryuever/unix-network-programming-v3

first error 
zoran@workstation ~/src/networking/unpv13e/libfree $ make
gcc -I../lib -g -O2 -D_REENTRANT -Wall   -c -o in_cksum.o in_cksum.c                                               │
gcc -I../lib -g -O2 -D_REENTRANT -Wall   -c -o inet_ntop.o inet_ntop.c                                             │
inet_ntop.c: In function ‘inet_ntop’:                                                                              │
inet_ntop.c:60:9: error: argument ‘size’ doesn’t match prototype                                                   │
   60 |  size_t size;                                                                                              │
      |         ^~~~                                                                                               │
In file included from inet_ntop.c:27:                                                                              │
/usr/include/arpa/inet.h:64:20: error: prototype declaration                                                       │
   64 | extern const char *inet_ntop (int __af, const void *__restrict __cp,                                       │
      |                    ^~~~~~~~~                                                                               │
make: *** [<builtin>: inet_ntop.o] Error 1

solution is to change inet_ntop in libfree as it says
Resolution : inet_ntop.c on line 61 : size_t size -> socklen_t size (change it with)

That results in error
zoran@workstation ~/src/networking/unpv13e/libfree $ make                                                          
gcc -I../lib -g -O2 -D_REENTRANT -Wall   -c -o inet_ntop.o inet_ntop.c                                             
/usr/include/arpa/inet.h: In function ‘inet_ntop’:                                                                 
inet_ntop.c:152:23: warning: ‘best.len’ may be used uninitialized in this function [-Wmaybe-uninitialized]         
  152 |   if (best.base == -1 || cur.len > best.len)                                                               
      |       ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~                                                                
inet_ntop.c:123:28: note: ‘best.len’ was declared here                                                             
  123 |  struct { int base, len; } best, cur;                                                                      │
      |                            ^~~~


VisualStudioCode-OSS

Include path
${workspaceFolder}/**
${workspaceFolder}/lib

Compiler path
/usr/bin/gcc

IntliSense mode
gcc-x64

{
    "configurations": [
        {
            "name": "Linux",
            "includePath": [
                "${workspaceFolder}/**",
                "${workspaceFolder}/lib"
            ],
            "defines": [],
            "compilerPath": "/usr/bin/gcc",
            "cStandard": "c11",
            "cppStandard": "c++11",
            "intelliSenseMode": "gcc-x64"
        }
    ],
    "version": 4
}
